# 7559_Programacion_Concurrente

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
1-yt_viewscalc_forkjoin_model_rayon/: .gitignore  Cargo.toml
assets/db_test_client/: Cargo.toml
assets/docs/: casos_prueba.md
database/: Cargo.toml
database/src/: db_communicator.rs  db_handler.rs  global_stock.rs  lib.rs  main.rs  pending_deliveries.rs  pending_order_results.rs
e_commerce/: Cargo.toml
e_commerce/src/: lib.rs  main.rs
ejercicios_adicionales/1-yt_viewscalc_forkjoin_model_rayon/: README.md
ejercicios_adicionales/8-sockets-examples-edit/server/: Cargo.toml
ejercicios_adicionales/8-sockets-examples-edit/server/src/: main.rs
examenes/: final_19_dic_2023.md  parcial_2c_2023.md
examenes/solucion_parcial/: Cargo.toml
examenes/solucion_semaforo_parcial/: Cargo.toml
ferris_db/: Cargo.toml
ferris_db/src/: lib.rs  (+1 more)
ferris_e_commerce/: Cargo.toml
ferris_e_commerce/data/orders/: orders1.txt  orders2.txt
ferris_e_commerce/src/: lib.rs  main.rs
ferris_e_commerce/src/e_commerce/: connection_handler.rs  constants.rs  db_communicator.rs  db_middleman.rs  handler.rs  input_handler.rs  mod.rs  order_handler.rs  order_worker.rs  sl_communicator.rs  sl_middleman.rs  ss_communicator.rs  ss_middleman.rs  txt
ferris_local_shop/: Cargo.toml
ferris_local_shop/data/orders/: orders1.txt
ferris_local_shop/data/stock/: stock1.txt  stock2.txt
ferris_local_shop/src/: lib.rs  main.rs
ferris_local_shop/src/local_shop/: connection_handler.rs  constants.rs  handler.rs  input_handler.rs  ls_communicator.rs  ls_middleman.rs  mod.rs  order_handler.rs  order_worker.rs  stock_handler.rs
local/: Cargo.toml
local_shop/: Cargo.toml
shared/: Cargo.toml
temp_for_migration/: README.md
tp/: LICENSE
(+99 files in other folders)
