[package]
name = "ferris_e_commerce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
actix = "0.13.0"
actix-rt = "2.0"                                               # <-- Runtime for actix
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
futures-channel = "0.3.29"
tokio = { version = "^1", features = ["full"] }
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
