[package]
name = "ferris_local_shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
rand = "0.8.5"
actix = "0.13.1"
actix-rt = "2.0"                                               # <-- Runtime for actix
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
futures-channel = "0.3.29"
tokio = { version = "^1", features = ["full"] }
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
